@@ -3,6 +3,7 @@
   -added more hps for 2.0 prep
   -changed hookshot/longshot images to be better distinguishable
   -changed the dungeon icons to Hylian Serif font with outline
+  -changed actions for the medallions/stones, left click toggles (except for free) and right click progresses forward through the cycle
 1.0.0.7:
   -added labels below the medallions/stones
   -fixed two Forest Temple locations
